@@ -2,8 +2,9 @@
 	<name>Unity Tools</name>
 	<author>kode80</author>
 	<version>1.2.2</version>
-	<notes>Fixed GUIDelayedIntField on &lt; Unity 5.3.0
+	<notes>*Fixed GUIDelayedIntField on &lt; Unity 5.3.0
 * Added AssetUpdater UI for editor Personal Theme
+* Fixed exception when local version files are moved mid-download
 	</notes>
 	<package-uri>https://raw.github.com/kode80/UnityTools/master/kode80UnityTools.unitypackage</package-uri>
 	<version-uri>https://raw.github.com/kode80/UnityTools/master/Assets/kode80/UnityTools/AssetVersion.xml</version-uri>
